--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-</body>
-</html>
+---
+layout: default
+title: Abraham Martín-Campillo
+---
+
+<div id="home">
+  <h1>About</h1>
+  <ul class="posts">
+    Here it goes the text
+  </ul>
+</div>
